# serializer version: 1
# name: TestTransactionsProducerCreate.test_balance_already_exists
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_commodity_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'commodity': list([
        '12345678-1234-1234-1234-123456789012',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_conditional_traceability[file]
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': 'file',
      'seller': None,
      'status': 'accepted',
      'traceability': 'conditional',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_conditional_traceability[manual]
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': 'manual',
      'seller': None,
      'status': 'accepted',
      'traceability': 'conditional',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_create_recipient_and_send_invite_email
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_create_recipient_and_send_invite_phone
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_farm_latitude_without_longitude
  dict({
    'code': 'api.bad_request',
    'message': 'Location must be complete or must be empty',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_farm_longitude_without_latitude
  dict({
    'code': 'api.bad_request',
    'message': 'Location must be complete or must be empty',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_find_recipient_with_email
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_find_recipient_with_phone
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_full_traceability[gps]
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': 'gps',
      'seller': None,
      'status': 'accepted',
      'traceability': 'full',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_full_traceability[qr]
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': 'qr',
      'seller': None,
      'status': 'accepted',
      'traceability': 'full',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_incomplete_traceability
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': False,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'incomplete',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_invalid_latitude_boundary
  dict({
    'code': 'api.bad_request',
    'message': 'Latitude must be between -90 and 90 degrees',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_invalid_longitude_boundary
  dict({
    'code': 'api.bad_request',
    'message': 'Longitude must be between -180 and 180 degrees',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_latitude_boundary_90
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': 90.0,
      'transaction_longitude': 0.0,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_latitude_boundary_minus_90
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': -90.0,
      'transaction_longitude': 0.0,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_latitude_without_longitude
  dict({
    'code': 'api.bad_request',
    'message': 'Location must be complete or must be empty',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_location_file_invalid_geojson
  dict({
    'code': 'api.bad_request',
    'message': 'Location file syntax is invalid',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_location_file_invalid_json
  dict({
    'code': 'api.bad_request',
    'message': 'Location file syntax is invalid',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_location_file_missing_for_file
  dict({
    'code': 'api.bad_request',
    'message': 'Location file must be provided for this location type',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_location_file_missing_for_qr
  dict({
    'code': 'api.bad_request',
    'message': 'Location file must be provided for this location type',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_longitude_boundary_180
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': 0.0,
      'transaction_longitude': 180.0,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_longitude_boundary_minus_180
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': 0.0,
      'transaction_longitude': -180.0,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_longitude_without_latitude
  dict({
    'code': 'api.bad_request',
    'message': 'Location must be complete or must be empty',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_no_location
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_no_location_type
  dict({
    'code': 'api.bad_request',
    'message': 'Location file is not supported for this location type',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_partial_traceability
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': None,
      'farm_longitude': None,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': None,
      'seller': None,
      'status': 'accepted',
      'traceability': 'partial',
      'transaction_latitude': None,
      'transaction_longitude': None,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_qr_file_invalid_syntax
  dict({
    'code': 'pydantic.validation_error',
    'errors': dict({
      'location_file': list([
        'Input should be an instance of InMemoryUploadedFile',
      ]),
    }),
    'message': 'location_file: Input should be an instance of InMemoryUploadedFile',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_recipient_invalid_multiple_fields
  dict({
    'code': 'api.bad_request',
    'message': 'Transaction recipient data must contain only one identifier at a time',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_recipient_not_implemented_error
  dict({
    'code': 'api.internal',
    'message': 'Internal Server Error',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_success[file]
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': 1.0,
      'farm_longitude': 1.0,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': 'file',
      'seller': None,
      'status': 'accepted',
      'traceability': 'conditional',
      'transaction_latitude': 0.0,
      'transaction_longitude': 0.0,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_success[gps]
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': 1.0,
      'farm_longitude': 1.0,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': 'gps',
      'seller': None,
      'status': 'accepted',
      'traceability': 'full',
      'transaction_latitude': 0.0,
      'transaction_longitude': 0.0,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_success[manual]
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': 1.0,
      'farm_longitude': 1.0,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': 'manual',
      'seller': None,
      'status': 'accepted',
      'traceability': 'conditional',
      'transaction_latitude': 0.0,
      'transaction_longitude': 0.0,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_success[qr]
  dict({
    'data': dict({
      'action': 'buying',
      'buyer': dict({
        'gadgets': list([
          dict({
            'identifier': 'vclayton@example.org',
            'is_verified': True,
            'type': 'email',
          }),
          dict({
            'identifier': '51393328711',
            'is_verified': True,
            'type': 'phone',
          }),
        ]),
        'username': 'cd18fc9fb6494384',
      }),
      'commodity': dict({
        'code': '5871',
        'group': dict({
          'name': 'seat',
        }),
        'has_recipe': False,
        'name': 'fish',
        'unit': 'tons',
      }),
      'created_at': '2020-01-01T00:00:00Z',
      'created_by_id': '00000000-0000-0000-0000-000000000000',
      'expires_at': None,
      'farm_latitude': 1.0,
      'farm_longitude': 1.0,
      'is_automatic': False,
      'is_buying_from_farmer': True,
      'location': 'qr',
      'seller': None,
      'status': 'accepted',
      'traceability': 'full',
      'transaction_latitude': 0.0,
      'transaction_longitude': 0.0,
      'type': 'producer',
      'updated_at': '2020-01-01T00:00:00Z',
      'volume': 1.0,
    }),
    'success': True,
  })
# ---
# name: TestTransactionsProducerCreate.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestTransactionsProducerCreate.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
